# FedKubeGNN-Privacy-Preserving-Network-Anomaly-Detection-using-Edge-attributed-GraphSAGE

./: .gitignore  CLAUDE.md  PhanChiaTask_DoAn.md 23-39-29-802.md  README.md  config.yaml  pyproject.toml  requirements-phase2.txt  requirements.txt
.harness-core/: .gitignore  manifest.json
artifacts/: eda_summary.csv
artifacts/phase1_results/: phase_a_loso_egraphsage_3modes.csv  phase_a_per_scenario_egraphsage_3modes.csv  phase_a_pooled_egraphsage_3modes.csv  phase_b_loso_mode-none_5models.csv  phase_b_pooled_mode-class_weight_5models.csv  results_summary.csv
artifacts/phase1_results/checkpoints/: loso_egraphsage_class_weight.csv  loso_egraphsage_none.csv  loso_egraphsage_undersample.csv  loso_gat_none.csv  loso_gcn_none.csv  loso_graphsage_none.csv  loso_sage_edge_concat_none.csv
docs/: HANDOFF_PHASE2.md  PHASE1_REPORT.md  PHASE2_ARCHITECTURE.md
docs/plans/active/: phase2-federated-foundation.md
scripts/: download_all.sh  download_data.sh  eda_all_scenarios.py  make_phase1_charts.py  run_full_gpu.sh  test_baselines.py  test_data_cache.py  test_egraphsage_layer.py  test_egraphsage_model.py  test_evaluate.py  test_gat.py  test_multi_scenario.py  test_resume_logic.py  test_run_experiments.py  test_safe_split.py  test_train.py
src/: __init__.py  data_io.py  evaluate.py  graph_build.py  imbalance.py  model.py  multi_scenario.py  preprocess.py  run_experiments.py  train.py
src/federated/: __init__.py
tests/federated/: __init__.py  test_aggregation.py  test_contracts.py  test_flower_boundary.py  test_metrics.py  test_phase1_adapter.py  test_toy_federation.py
(+19 files in other folders)
