[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedkube-gnn-phase2"
version = "0.1.0"
description = "Reusable federated learning boundary for IoT-23 E-GraphSAGE"
requires-python = ">=3.10"
dependencies = [
  "flwr[simulation]==1.32.1",
  "numpy>=1.26,<2.0",
  "torch>=2.1.0",
]

[project.optional-dependencies]
phase1 = [
  "torch-geometric>=2.5.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "pyyaml>=6.0",
  "matplotlib>=3.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.flwr.app]
publisher = "fedkube-m06"
fab-format-version = 1
flwr-version-target = "1.32.1"

[tool.flwr.app.components]
serverapp = "src.federated.flower.toy_server_app:app"
clientapp = "src.federated.flower.toy_client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-evaluate = 1.0
local-epochs = 1
learning-rate = 0.15
weight-decay = 0.0
grad-clip = 1.0
optimizer = "sgd"
strategy = "fedavg"
proximal-mu = 0.0
seed = 42
save-model = false
model-output = "artifacts/phase2/toy_final_model.pt"
